# retail-ai-location-strategy

./: .gitignore  .mcp.json  README.md  cli_tools.py  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: competitor-mapping.md  gap-analysis.md  infographic-generator.md  intake.md  market-research.md  report-generator.md  strategy-advisor.md
.claude/output-styles/: strategy-assistant.md
.claude/skills/gap-analysis/: SKILL.md  implementation.py
.claude/skills/html-reporting/: SKILL.md  implementation.py
.claude/skills/maps-search/: SKILL.md  implementation.py
