[project]
name = "retail-ai-location-strategy"
version = "0.1.0"
description = "Retail AI Location Strategy Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.1",
    "googlemaps>=4.10.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
